--- a/src/app/components/products/products.component.css
+++ b/src/app/components/products/products.component.css
@@ -39,3 +39,12 @@
   transition: 0.3s ease-in-out;
   transform: scale(1.1);
 }
+
+.btn {
+  background-color: rgb(48, 38, 182);
+  color: white;
+  cursor: pointer;
+}
+.btn:hover {
+  background-color: rgb(27, 12, 236);
+}
