--- a/src/app/components/cart/cart.component.html
+++ b/src/app/components/cart/cart.component.html
@@ -24,7 +24,7 @@
 </ng-container>
 
 <ng-container *ngIf="products.length != 0">
-  <div class="container">
+  <div class="container mt-5">
     <div class="card-table">
       <div class="cart-product">
         <table class="table table-responsive">
@@ -93,9 +93,8 @@
                   [isDisabled]="false"
                 ></app-button>
               </td>
-              <td>
-                <strong>Grand Total : {{ grandTotal | currency }}</strong>
-              </td>
+
+              <strong>Grand Total : {{ grandTotal | currency }}</strong>
             </tr>
           </tbody>
         </table>
