--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -3,13 +3,14 @@
     <i style="font-size: 30px" class="fas fa-shipping-fast">&nbsp; </i>
     <strong style="font-size: 30px">shop</strong>
     <div class="form-group">
-      <input type="text" class="form-control" placeholder="search products" />
+      <input type="text" class="form-control" placeholder="search products" [(ngModel)]="searchTerm" (keyup)="search($event)"/>
     </div>
     <!-- <span class="fas fa-search search-icon"></span> -->
   </div>
   <button class="btn btn-primary" routerLink="/cart">
     <i style="font-size: 30px" class="fas fa-cart-plus"></i>
-    <div style="font-size: 12px" class="badge bg-danger">{{totalCartItem}}</div>
+    <div style="font-size: 12px" class="badge bg-danger">{{totalCartItem}} items</div>
+    <!-- <div style="font-size: 12px" class="badge bg-danger">{{totalAmount}} items</div> -->
     
   </button>
 </div>
