button issue fix

--- a/src/app/components/cart/cart.component.html
+++ b/src/app/components/cart/cart.component.html
@@ -23,7 +23,7 @@
   </div>
 </ng-container>
 
-<ng-container *ngIf="products.length != 0">
+<ng-container *ngIf="products.length >0">
   <div class="container mt-5">
     <div class="card-table">
       <div class="cart-product">
