--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -10,7 +10,8 @@
   <button class="btn btn-primary" routerLink="/cart">
     <i style="font-size: 30px" class="fas fa-cart-plus"></i>
     <div style="font-size: 12px" class="badge bg-danger">{{totalCartItem}} items</div>
-    <!-- <div style="font-size: 12px" class="badge bg-danger">{{totalAmount}} items</div> -->
+    <div style="font-size: 12px" class="badge bg-danger">{{grandTotal |currency}} </div>
     
   </button>
+
 </div>
