button alignment fix

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -7,11 +7,11 @@
     </div>
     <!-- <span class="fas fa-search search-icon"></span> -->
   </div>
-  <button class="btn btn-primary" routerLink="/cart">
+  <!-- <button class="btn btn-primary" routerLink="/cart">
     <i style="font-size: 30px" class="fas fa-cart-plus"></i>
     <div style="font-size: 12px" class="badge bg-danger">{{totalCartItem}} items</div>
     <div style="font-size: 12px" class="badge bg-danger">{{grandTotal |currency}} </div>
     
-  </button>
+  </button> -->
 
 </div>
