--- a/src/app/components/cart/cart.component.html
+++ b/src/app/components/cart/cart.component.html
@@ -13,27 +13,20 @@
       <h4>Your cart is empty</h4>
       <h5>Add item to it now</h5>
 
-      <app-button
-        routerLink="/products"
-        text="Shop now"
-        class="btn btn-primary"
-      >
-      </app-button>
+      <button routerLink="/products" class="btn btn-primary">Shop now</button>
     </div>
   </div>
 </ng-container>
 
-<ng-container *ngIf="products.length >0">
+<ng-container *ngIf="products.length > 0">
   <div class="container mt-5">
     <div class="card-table">
       <div class="cart-product">
         <table class="table table-responsive">
           <thead>
             <tr>
-              <th>Sr.No</th>
               <th>Product Name</th>
               <th>Product Image</th>
-              <th>Description</th>
               <th>Price</th>
               <th>Quantity</th>
               <th>Total</th>
@@ -42,12 +35,10 @@
           </thead>
           <tbody>
             <tr *ngFor="let item of products; let i = index">
-              <td>{{ i + 1 }}</td>
               <td>{{ item.title }}</td>
               <td>
-                <img style="width: 120px" src="{{ item.image }}" alt="" />
+                <img style="width: 30px" src="{{ item.image }}" alt="" />
               </td>
-              <td style="width: 25%">{{ item.description }}</td>
               <th style="width: 12%">{{ item.price }}</th>
               <td style="width: 12%">
                 <input
@@ -77,22 +68,6 @@
                   [isDisabled]="false"
                 ></app-button>
               </td>
-              <td>
-                <app-button
-                  routerLink="/products"
-                  text="Shop More"
-                  class="btn btn-primary"
-                  [isDisabled]="false"
-                >
-                </app-button>
-              </td>
-              <td>
-                <app-button
-                  text="Checkout"
-                  class="btn btn-success"
-                  [isDisabled]="false"
-                ></app-button>
-              </td>
 
               <strong>Grand Total : {{ grandTotal | currency }}</strong>
             </tr>
@@ -102,4 +77,3 @@
     </div>
   </div>
 </ng-container>
-
