--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,9 @@
-<app-header></app-header>
+<app-header [inputSideNav]="sidenav"></app-header>
 
-<router-outlet></router-outlet>
+<mat-sidenav-container class="example-container"[hasBackdrop]="false">
+  <mat-sidenav class="example-sidenav" #sidenav mode="over" position="end" 
+    ><app-cart></app-cart>
+  </mat-sidenav>
+
+  <mat-sidenav-content> <router-outlet></router-outlet></mat-sidenav-content>
+</mat-sidenav-container>
