--- a/src/app/components/cart/cart.component.css
+++ b/src/app/components/cart/cart.component.css
@@ -1,35 +1,37 @@
 .card {
-  height: 60vh;
+  height: 50vh;
   margin: 25px;
   padding: 25px;
-}
-
-.center {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  text-align: center;
-}
-.center img {
-  height: 162px;
-  width: 250px;
-  margin: 20px 0px;
-}
-.card-table {
-  border: 1px solid rgba(0, 0, 0, 0.2);
-  border-radius: 0.5rem;
-}
-
-.center .btn {
-  font-size: 14px;
-  margin-top: 20px;
-  font-weight: 400;
-  padding: 12px 72px;
-  border-radius: 3px;
 }
 .card-title {
   font-weight: 700;
   font-size: 24px;
   text-align: center;
+}
+.center {
+  margin-top: 50px;
+  text-align: center;
+}
+.center img {
+  height: 100px;
+  width: 100px;
+  margin: 20px 0px;
+}
+.cart-table {
+  border: 1px solid rgba(0, 0, 0, 0.2);
+  border-radius: 0.5rem;
+}
+
+.input_quantity {
+  width: 40px;
+}
+
+.empty_cart{
+padding: none;
+}
+.product_title{
+font-size: 12px;
+}
+.delete_icon:hover{
+  color: red;
 }
