--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,5 +1,7 @@
 .example-sidenav {
-  width: 500px;
-  height: 100vh;
-  background-color: rgb(241, 233, 233);
+  width: 350px;
+  min-height: 100vh;
+  background-color: rgb(224, 214, 214);
+  position: fixed;
+  margin-top: 64px;
 }
