--- a/src/app/components/cart/cart.component.html
+++ b/src/app/components/cart/cart.component.html
@@ -18,7 +18,9 @@
 
 <ng-container *ngIf="products.length > 0">
   <div class="container mt-5">
+    <div class="total_products">Total {{products.length}} items</div>
     <div class="cart-table">
+      
       <table class="table table-responsive">
         <tbody>
           <tr *ngFor="let item of products; let i = index">
