--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,5 +1,5 @@
 
-<div class="navbar navbar-dark bg-primary shadow-sm">
+<div class="navbar fixed-top navbar-dark bg-primary shadow-sm">
   <div class="navbar-brand d-flex align-items-center">
     <i style="font-size: 30px" class="fas fa-shipping-fast">&nbsp; </i>
     <strong style="font-size: 30px">shop</strong>
