--- a/src/app/components/products/products.component.css
+++ b/src/app/components/products/products.component.css
@@ -25,7 +25,7 @@
 
 .card {
   padding: 10px;
-  margin: 10px;
+  margin: 10px 5px;
  
 }
 
@@ -53,4 +53,7 @@
 
 .hidden{
   display: none;
+}
+.details{
+margin-bottom: 6px;
 }
