--- a/src/app/components/products/products.component.html
+++ b/src/app/components/products/products.component.html
@@ -48,19 +48,21 @@
         let i = index
       "
     >
-      <div class="card col-xxl-2 col-lg-3">
+      <div
+        class="card col-xxl-2 col-lg-3"
+        (mouseenter)="enter(i)"
+        (mouseleave)="leave(i)"
+      >
         <img src="{{ item.image }}" alt="" />
+
         <h5
           style="white-space: nowrap; overflow: hidden; text-overflow: ellipsis"
         >
           {{ item.title }}
         </h5>
-        <p
-          style="white-space: nowrap; overflow: hidden; text-overflow: ellipsis"
-        >
-          {{ item.description }}
-        </p>
-        <p><strong>Price:</strong> ${{ item.price }}</p>
+
+        <p *ngIf="hoverIndex != i"><strong>Price:</strong> ${{ item.price }}</p>
+        <button class="details" *ngIf="hoverIndex == i">Details ></button>
 
         <div class="d-flex">
           <div [ngClass]="addedItems.includes(item.id) ? '' : 'hidden'">
