--- a/src/app/components/products/products.component.css
+++ b/src/app/components/products/products.component.css
@@ -4,6 +4,7 @@
   flex-direction: column;
   min-width: 0;
   word-wrap: break-word; */
+  margin-top: 65px;
   background: #fff;
   background-clip: border-box;
   border: 1px solid rgba(0, 0, 0, 0.2);
