--- a/src/app/components/cart/cart.component.html
+++ b/src/app/components/cart/cart.component.html
@@ -17,57 +17,51 @@
 </ng-container>
 
 <ng-container *ngIf="products.length > 0">
-  <div class="container mt-4">
-    <div class="total_products">Total {{products.length}} items</div>
-    <div class="cart-table">
-      
-      <table class="table table-responsive">
-        <tbody>
-          <tr *ngFor="let item of products; let i = index">
-            <td class="product_title" style="width: 12%">{{ item.title }}</td>
-            <td>
-              <img style="width: 35px" src="{{ item.image }}" alt="" />
-            </td>
-            <td style="width: 25%">{{ item.price | currency }}</td>
-            <td style="width: 25%">
-              <input
-                type="number"
-                min="1"
-                max="50"
-                [(ngModel)]="item.quantity"
-                name="quantity"
-                class="input_quantity"
-                (change)="$ChangeGrandTotal()"
-              />
-            </td>
-            <th style="width: 25%">
-              {{ item.quantity * item.price | currency }}
-            </th>
-            <td>
-              <i
-                class="fa-solid fa-xmark delete_icon"
-                (click)="$RemoveItem(item)"
-              ></i>
-            </td>
-          </tr>
+  <div class="px-2 mt-4">
+    <div class="total_products">Total {{ products.length }} items</div>
+    <table class="table">
+      <tbody>
+        <tr *ngFor="let item of products; let i = index">
+          <td>
+            <img style="width: 30px" src="{{ item.image }}" alt="" />
+          </td>
 
-          <tr>
-            <td>
-              <app-button
-                (btnClick)="$EmptyCart()"
-                text="Empty Cart"
-                class="btn btn-danger empty_cart"
-                [isDisabled]="false"
-              ></app-button>
-            </td>
+          <td class="product_title">{{ item.title }}</td>
+          <td>{{ item.price }}</td>
 
-            <td>
-              Grand Total :
-              <strong>{{ grandTotal | currency }}</strong>
-            </td>
-          </tr>
-        </tbody>
-      </table>
+          <td style="width: 50%">
+            <input
+              type="number"
+              min="1"
+              max="50"
+              [(ngModel)]="item.quantity"
+              name="quantity"
+              class="input_quantity"
+              (change)="$ChangeGrandTotal()"
+            />
+          </td>
+          <th style="width: 25%" class="total_price">
+            {{ item.quantity * item.price | currency }}
+          </th>
+          <td>
+            <i
+              class="fa-solid fa-xmark delete_icon"
+              (click)="$RemoveItem(item)"
+            ></i>
+          </td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
+  <div class="bottom">
+    <div class="grandTotal">
+      <strong>{{ grandTotal | currency }}</strong>
     </div>
+
+    <app-button
+      (btnClick)="$EmptyCart()"
+      text="Empty Cart"
+      class="btn btn-danger"
+    ></app-button>
   </div>
 </ng-container>
