--- a/src/app/components/cart/cart.component.css
+++ b/src/app/components/cart/cart.component.css
@@ -18,6 +18,9 @@
   margin: 20px 0px;
 }
 
+.main {
+  margin-bottom: 100px;
+}
 .input_quantity {
   width: 40px;
 }
@@ -29,9 +32,11 @@
   color: red;
 }
 .total_products {
-  font-size: 20px;
+  font-size: 18px;
   margin-bottom: 20px;
   font-weight: bold;
+  background-color: rgb(189, 180, 180);
+  padding: 20px;
 }
 .title_price {
   display: flex;
@@ -59,5 +64,5 @@
   height: 50px;
   padding: 20px 50px;
   background-color: rgb(221, 98, 98);
-  margin-right: 20px;
+  margin: 0 20px;
 }
