--- a/src/app/components/cart/cart.component.html
+++ b/src/app/components/cart/cart.component.html
@@ -17,7 +17,7 @@
 </ng-container>
 
 <ng-container *ngIf="products.length > 0">
-  <div class="px-2 mt-4">
+  <div class="main">
     <div class="total_products">Total {{ products.length }} items</div>
     <table class="table">
       <tbody>
