--- a/src/app/components/cart/cart.component.html
+++ b/src/app/components/cart/cart.component.html
@@ -23,13 +23,15 @@
       <tbody>
         <tr *ngFor="let item of products; let i = index">
           <td>
-            <img style="width: 30px" src="{{ item.image }}" alt="" />
+            <img style="width: 40px" src="{{ item.image }}" alt="" />
           </td>
 
-          <td class="product_title">{{ item.title }}</td>
-          <td>{{ item.price }}</td>
+          <td class="product_title_price" style="width: 25%">
+            {{ item.title }}<br />
+            <span class="price">{{ item.price | currency }}</span>
+          </td>
 
-          <td style="width: 50%">
+          <td style="width: 25%">
             <input
               type="number"
               min="1"
