--- a/src/app/components/products/products.component.html
+++ b/src/app/components/products/products.component.html
@@ -62,7 +62,7 @@
         </h5>
 
         <p *ngIf="hoverIndex != i"><strong>Price:</strong> ${{ item.price }}</p>
-        <button class="details" *ngIf="hoverIndex == i">Details ></button>
+        <button class="details" (click)="openDialog()" *ngIf="hoverIndex == i" >Details ></button>
 
         <div class="d-flex">
           <div [ngClass]="addedItems.includes(item.id) ? '' : 'hidden'">
