product page extra space fix

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -18,8 +18,8 @@
     <div style="font-size: 12px" class="badge bg-danger">
       {{ totalCartItem }} items
     </div>
-    <div style="font-size: 12px" class="badge bg-danger">
+    <!-- <div style="font-size: 12px" class="badge bg-danger">
       {{ grandTotal | currency }}
-    </div>
+    </div> -->
   </button>
 </div>
