--- a/src/app/components/cart/cart.component.html
+++ b/src/app/components/cart/cart.component.html
@@ -68,4 +68,4 @@
     ></app-button>
   </div>
 </ng-container>
-<!-- <button class="close">c</button> -->
+<button class="close" (click)="inputSideNav.toggle()"><i class="fa-solid fa-arrow-right"></i></button>
