--- a/src/app/components/cart/cart.component.css
+++ b/src/app/components/cart/cart.component.css
@@ -68,9 +68,13 @@
   height: 40px;
   margin-left: 5px;
 }
-/* 
-.close{
-  position: absolute;
-  left: 0;
 
-} */
+.close {
+  position: fixed;
+  top: 50%;
+  bottom: 50%;
+  margin-left: -25px;
+  height: 50px;
+  width: 25px;
+  background-color: rgb(155, 116, 62);
+}
