--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <app-header [inputSideNav]="sidenav"></app-header>
 
 <mat-sidenav-container class="example-container"[hasBackdrop]="false">
-  <mat-sidenav class="example-sidenav" #sidenav mode="over" position="end" 
+  <mat-sidenav class="example-sidenav" #sidenav mode="over" position="end" opened
     ><app-cart [inputSideNav]="sidenav"></app-cart>
   </mat-sidenav>
 
