--- a/src/app/components/product-details/product-details.component.html
+++ b/src/app/components/product-details/product-details.component.html
@@ -1,4 +1,4 @@
-<div style="width: 800px; height: 700px; display: flex" class="mt-5">
+<div style="width: 800px; height: 600px; display: flex" class="mt-5">
   <img
     src="{{ products.image }}"
     alt=""
@@ -12,7 +12,7 @@
     <h3>{{ products.price | currency }}</h3>
 
     <div class="d-flex">
-      <button class="btn btn-lg btn-primary">-</button>
+      <button class="btn btn-lg btn-primary" (click)="$Decrease()">-</button>
       <h2 class="mx-5">{{ products.quantity }} in bag</h2>
       <button class="btn btn-lg btn-primary" (click)="$Increase()">+</button>
     </div>
