--- a/src/app/components/products/products.component.html
+++ b/src/app/components/products/products.component.html
@@ -62,7 +62,13 @@
         </h5>
 
         <p *ngIf="hoverIndex != i"><strong>Price:</strong> ${{ item.price }}</p>
-        <button class="details" (click)="$OpenDialog(item,'3000ms', '1500ms')" *ngIf="hoverIndex == i" >Details ></button>
+        <button
+          class="details"
+          (click)="$OpenDialog(item, '3000ms', '1500ms')"
+          *ngIf="hoverIndex == i"
+        >
+          Details >
+        </button>
 
         <div class="d-flex">
           <div [ngClass]="addedItems.includes(item.id) ? '' : 'hidden'">
@@ -70,22 +76,34 @@
               (click)="$Decrease(item)"
               class="btn"
               style="width: 30px; padding: 5px; margin: 0px 8px"
+              [ngClass]="item.quantity == 0 ? 'hidden' : ''"
             >
               -
             </button>
           </div>
           <button
-            (click)="$AddToCartButton_click($event.target, item, item.id)"
+            (click)="$AddToCartButton_click(item, item.id)"
             class="btn w-100"
           >
-            <i class="fa-solid fa-bolt" style="margin-right: 8px"></i> Add to
-            cart
+            <i
+              *ngIf="item.quantity == 1"
+              class="fa-solid fa-bolt"
+              style="margin-right: 8px"
+            ></i>
+            {{
+              item.quantity == 1
+                ? "add To cart"
+                : item.quantity == 0
+                ? "add To cart"
+                : item.quantity
+            }}
           </button>
           <div [ngClass]="addedItems.includes(item.id) ? '' : 'hidden'">
             <button
               (click)="$Increase(item)"
               class="btn"
               style="width: 30px; padding: 5px; margin-left: 8px"
+              [ngClass]="item.quantity == 0 ? 'hidden' : ''"
             >
               +
             </button>
