--- a/src/app/components/product-details/product-details.component.html
+++ b/src/app/components/product-details/product-details.component.html
@@ -12,9 +12,17 @@
     <h3>{{ products.price | currency }}</h3>
 
     <div class="d-flex">
-      <button class="btn btn-lg btn-primary" (click)="$Decrease(products)" [disabled]="products.quantity==0">-</button>
+      <button
+        class="btn btn-lg btn-primary"
+        (click)="$Decrease(products)"
+        [disabled]="products.quantity == 0"
+      >
+        -
+      </button>
       <h2 class="mx-5">{{ products.quantity }} in bag</h2>
-      <button class="btn btn-lg btn-primary" (click)="$Increase(products)">+</button>
+      <button class="btn btn-lg btn-primary" (click)="$Increase(products)">
+        +
+      </button>
     </div>
 
     <h2 class="mt-5">{{ products.description }}</h2>
