--- a/src/app/components/products/products.component.html
+++ b/src/app/components/products/products.component.html
@@ -40,76 +40,84 @@
   </div>
 </div>
 <!-- /| filter: searchKey:'title' -->
-<div class="container">
-  <div class="row">
-    <ng-container
-      *ngFor="
-        let item of filterCategory | filter: searchKey:'title';
-        let i = index
-      "
-    >
-      <div
-        class="card col-xl-2 col-md-3 col-sm-12"
-        (mouseenter)="enter(i)"
-        (mouseleave)="leave(i)"
+<div class="d-flex">
+  <div><mat-slider aria-label="unit(s)"></mat-slider></div>
+
+  <div class="container">
+    <div class="row">
+      <ng-container
+        *ngFor="
+          let item of filterCategory | filter: searchKey:'title';
+          let i = index
+        "
       >
-        <img src="{{ item.image }}" alt="" />
-
-        <h5
-          style="white-space: nowrap; overflow: hidden; text-overflow: ellipsis"
+        <div
+          class="card col-xl-2 col-md-3 col-sm-12"
+          (mouseenter)="enter(i)"
+          (mouseleave)="leave(i)"
         >
-          {{ item.title }}
-        </h5>
+          <img src="{{ item.image }}" alt="" />
 
-        <p *ngIf="hoverIndex != i"><strong>Price:</strong> ${{ item.price }}</p>
-        <button
-          class="details"
-          (click)="$OpenDialog(item, '3000ms', '1500ms')"
-          *ngIf="hoverIndex == i"
-        >
-          Details >
-        </button>
-
-        <div class="d-flex">
-          <div [ngClass]="addedItems.includes(item.id) ? '' : 'hidden'">
-            <button
-              (click)="$Decrease(item)"
-              class="btn"
-              style="width: 30px; padding: 5px; margin: 0px 8px"
-              [ngClass]="item.quantity == 0 ? 'hidden' : ''"
-            >
-              -
-            </button>
-          </div>
-          <button
-            (click)="$AddToCartButton_click(item, item.id)"
-            class="btn w-100"
-            [disabled]="item.quantity==50"
+          <h5
+            style="
+              white-space: nowrap;
+              overflow: hidden;
+              text-overflow: ellipsis;
+            "
           >
-            <i
-              *ngIf="item.quantity == 0" 
-              class="fa-solid fa-bolt"
-              style="margin-right: 8px"
-            ></i>
-            {{
-               item.quantity == 0 
-                ? "add To cart"
-                : item.quantity+' in bag'
-            }}
+            {{ item.title }}
+          </h5>
+
+          <p *ngIf="hoverIndex != i">
+            <strong>Price:</strong> ${{ item.price }}
+          </p>
+          <button
+            class="details"
+            (click)="$OpenDialog(item, '3000ms', '1500ms')"
+            *ngIf="hoverIndex == i"
+          >
+            Details >
           </button>
-          <div [ngClass]="addedItems.includes(item.id) ? '' : 'hidden'">
+
+          <div class="d-flex">
+            <div [ngClass]="addedItems.includes(item.id) ? '' : 'hidden'">
+              <button
+                (click)="$Decrease(item)"
+                class="btn"
+                style="width: 30px; padding: 5px; margin: 0px 8px"
+                [ngClass]="item.quantity == 0 ? 'hidden' : ''"
+              >
+                -
+              </button>
+            </div>
             <button
-              (click)="$Increase(item)"
-              class="btn"
-              style="width: 30px; padding: 5px; margin-left: 8px"
-              [ngClass]="item.quantity == 0 ? 'hidden' : ''"
-              [disabled]="item.quantity==50"
+              (click)="$AddToCartButton_click(item, item.id)"
+              class="btn w-100"
+              [disabled]="item.quantity == 50"
             >
-              +
+              <i
+                *ngIf="item.quantity == 0"
+                class="fa-solid fa-bolt"
+                style="margin-right: 8px"
+              ></i>
+              {{
+                item.quantity == 0 ? "add To cart" : item.quantity + " in bag"
+              }}
             </button>
+            <div [ngClass]="addedItems.includes(item.id) ? '' : 'hidden'">
+              <button
+                (click)="$Increase(item)"
+                class="btn"
+                style="width: 30px; padding: 5px; margin-left: 8px"
+                [ngClass]="item.quantity == 0 ? 'hidden' : ''"
+                [disabled]="item.quantity == 50"
+              >
+                +
+              </button>
+            </div>
           </div>
-        </div> 
-      </div>
-    </ng-container>
+        </div>
+      </ng-container>
+    </div>
   </div>
 </div>
