--- a/src/app/components/products/products.component.css
+++ b/src/app/components/products/products.component.css
@@ -27,11 +27,10 @@
 .card {
   padding: 10px;
   margin: 10px 5px;
- 
 }
 
 .card img {
-  object-fit:fill;
+  object-fit: fill;
   height: 200px;
   margin-bottom: 15px;
   transition: 0.3s ease-in-out;
@@ -52,13 +51,18 @@
   background-color: rgb(27, 12, 236);
 }
 
-.hidden{
+.hidden {
   display: none;
 }
-.details{
-margin-bottom: 6px;
+.details {
+  margin-bottom: 6px;
 }
-.row{
+.row {
   justify-content: center;
   /* width: 100%; */
+}
+
+mat-slider {
+  
+  width: 200px;
 }
